tests/toylang/neg/001456_mutation.toylang
program a = { var a : program; } .
